Greeting controller added